--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "path": "^0.12.7"
+    "http": "^0.0.1-security",
+    "path": "^0.12.7",
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2",
+    "ws": "^8.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
